overlap issue

--- a/src/styles/Destination.css
+++ b/src/styles/Destination.css
@@ -98,5 +98,6 @@
     100% { 
         /* -webkit-transform: rotate(360deg);  */
         transform:rotate(360deg); 
+        z-index:0;
     } 
 }
